syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
	rpc Call(Request) returns (Response) {}
}

message Request {
	string uuid=1;
}

message Response {
	bytes img = 1;
}
